@@ -276,3 +276,16 @@ BEGIN { $tests += 3 + 4 * 3 }
         setlogmask($oldmask);
     }
 }
+
+BEGIN { $tests += 4 }
+eval { $r = setlogsock("stream", "foo/bar") };
+ok( !$r, "setlogsock failed correctly with a nonexistent stream path");
+is( $@, '', "setlogsock didn't croak");
+
+SKIP: {
+    my $service = getservbyname("syslog", "tcp") || getservbyname("syslog-ng", "tcp");
+    skip "can't test setlogsock() tcp failure", 2 if $service;
+    eval { $r = setlogsock("tcp") };
+    ok( !$r, "setlogsock failed correctly when tcp services can't be resolved");
+    is( $@, '', "setlogsock didn't croak");
+}
